--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         content="Jack H Ersbo"
         />
         <link rel="stylesheet" href="./Assets/css/styles.css" />
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
         <title>Jack Ersbo's Digital Portfolio</title>
     </head>
 
@@ -45,9 +45,9 @@
                     <h1>
                         Jack H. Ersbo
                     </h1>
-                    <h2>
+                    <h4>
                         FULL-STACK DEVELOPER
-                    </h2>
+                    </h4>
                     <div class="description">
                         <p>
                             "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
@@ -59,22 +59,51 @@
                 <div class="icons">
                     <ul id='ul-icons'>
                         <li>
-                            <i class="#"></i>
+                            <a href="#"><i class="fab fa-linkedin"></i></a>
                         </li>
                         <li>
-                            <i class="#"></i>
+                            <a href="#"><i class="fab fa-github-square"></i></a>
                         </li>
                         <li>
-                            <i class="#"></i>
+                            <a href="#"><i class="fas fa-envelope-square"></i></a>
                         </li>
                         <li>
-                            <i class="#"></i>
+                            <a href="#"><i class="fab fa-twitter-square"></i></a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fab fa-instagram-square"></i></a>
                         </li>
                     </ul>
-                    
                 </div>
                 <img src="http://placekitten.com/g/300/200" alt="Example Photo">
             </section>
+            <footer>
+                <div class="footer">
+                    <div id="resume">
+                        <a href="#"><i class="far fa-file"></i></a>
+                        <h4>VIEW MY RESUME</h4>
+                    </div>
+                    <div id="form">
+                        <form action="#" method="GET" target="_blank">
+                            
+                            <label for="email" >Enter your email address.</label>
+                            <input type="text" required>
+
+                            <div id="radio">
+                                <label for="radio">Would you like to be notified when I update my portfolio?</label>
+                                <input type="radio" name="yes" value="yes">
+                                <label for="yes">Yes</label>
+                                <input type="radio" name="no" value="no">
+                                <label for="no">No</label>
+                            </div>
+                            <button type="submit" name="submit" formmethod="GET">SUBMIT</button>
+                        </form>
+                    </div>
+                    <div id="placeholder">
+                        <a href="#"><i class="fas fa-heading"></i></a>
+                    </div>
+                </div>
+            </footer>
         </div>
     </body>
 </html>
