--- a/index.html
+++ b/index.html
@@ -18,65 +18,67 @@
 
     <body>
         <div class="container">
-            <section id="left-block">
-                <nav class="nav" id="nav-home">
-                    <ul id="ul-nav">
-                        <li>
-                            <a href='#'>HOME</a>
-                        </li>
-                        <li>
-                            <a href='#'>ABOUT</a>
-                        </li>
-                        <li>
-                            <a href='#'>PORTFOLIO</a>
-                        </li>
-                        <li>
-                            <a href='#'>SERVICES</a>
-                        </li>
-                        <li>
-                            <a href='#'>TESTIMONIALS</a>
-                        </li>
-                        <li>
-                            <a href='#'>CONTACT</a>
-                        </li>
-                    </ul>
-                </nav>
-                <header>
-                    <h1>
-                        Jack H. Ersbo
-                    </h1>
-                    <h4>
-                        FULL-STACK DEVELOPER
-                    </h4>
-                    <div class="description">
-                        <p>
-                            "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
-                        </p>
+            <main>
+                <section id="left-block">
+                    <nav class="nav" id="nav-home">
+                        <ul id="ul-nav">
+                            <li>
+                                <a href='#'>HOME</a>
+                            </li>
+                            <li>
+                                <a href='#'>ABOUT</a>
+                            </li>
+                            <li>
+                                <a href='#'>PORTFOLIO</a>
+                            </li>
+                            <li>
+                                <a href='#'>SERVICES</a>
+                            </li>
+                            <li>
+                                <a href='#'>TESTIMONIALS</a>
+                            </li>
+                            <li>
+                                <a href='#'>CONTACT</a>
+                            </li>
+                        </ul>
+                    </nav>
+                    <header>
+                        <h1>
+                            Jack H. Ersbo
+                        </h1>
+                        <h4>
+                            FULL-STACK DEVELOPER
+                        </h4>
+                        <div class="description">
+                            <p>
+                                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+                            </p>
+                        </div>
+                    </header>
+                </section>
+                <section id="right-block">
+                    <div class="icons">
+                        <ul id='ul-icons'>
+                            <li>
+                                <a href="#"><i class="fab fa-linkedin"></i></a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="fab fa-github-square"></i></a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="fas fa-envelope-square"></i></a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="fab fa-twitter-square"></i></a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="fab fa-instagram-square"></i></a>
+                            </li>
+                        </ul>
                     </div>
-                </header>
-            </section>
-            <section id="right-block">
-                <div class="icons">
-                    <ul id='ul-icons'>
-                        <li>
-                            <a href="#"><i class="fab fa-linkedin"></i></a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fab fa-github-square"></i></a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fas fa-envelope-square"></i></a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fab fa-twitter-square"></i></a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fab fa-instagram-square"></i></a>
-                        </li>
-                    </ul>
-                </div>
-                <img src="http://placekitten.com/g/300/200" alt="Example Photo">
-            </section>
+                    <img id="main-pic" src="http://placekitten.com/g/300/200" alt="Example Photo">
+                </section>
+            </main>
             <footer>
                 <div class="footer">
                     <div id="resume">
