--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         </div>
                     </header>
                 </section>
-                <section id="right-block">
+                <section  id="right-block">
                     <div class="icons">
                         <ul id='ul-icons'>
                             <li>
@@ -76,7 +76,9 @@
                             </li>
                         </ul>
                     </div>
-                    <img id="main-pic" src="http://placekitten.com/g/900/600" alt="Example Photo">
+                    <div id="image" class="fill">
+                        <img id="main-pic" src="http://placekitten.com/g/600/200" alt="Example Photo">
+                    </div>
                 </section>
             </main>
             <footer>
@@ -90,7 +92,7 @@
                             
                             <label for="email" >Enter your email address.</label>
                             <input type="text" required>
-
+                            <!-- REDO THIS PART -->
                             <div id="radio">
                                 <label for="radio">Would you like to be notified when I update my portfolio?</label>
                                 <input type="radio" name="yes" value="yes">
